<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context=".ui.movie.SecondFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/Newmovie"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_gap"
        android:gravity="center"
        android:text="@string/new_movie"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        tools:layout_editor_absoluteX="-16dp" />

    <LinearLayout
        android:id="@+id/linealNewmovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Newmovie"
        app:layout_constraintVertical_bias="0.25">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xlarge_gap"
            android:layout_margin="@dimen/normal_gap"
            android:background="@color/cardLayout"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/CATEGORY"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xlarge_gap"
            android:layout_margin="@dimen/normal_gap"
            android:background="@color/cardLayout"
            android:hint="@string/category"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xlarge_gap"
            android:layout_margin="@dimen/normal_gap"
            android:background="@color/cardLayout"
            android:hint="@string/description"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/Calification"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xlarge_gap"
            android:layout_margin="@dimen/normal_gap"
            android:background="@color/cardLayout"
            android:hint="@string/calification"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_gap"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/large_gap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linealNewmovie"
        />

</androidx.constraintlayout.widget.ConstraintLayout>