<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context=".ui.movie.ThirdFragment">

    <ImageView
        android:id="@+id/starWars2"
        android:layout_width="@dimen/width_image"
        android:layout_height="@dimen/height_image"
        android:src="@drawable/star_wars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_gap"
        android:layout_marginTop="@dimen/extra_gap"
        android:layout_marginEnd="@dimen/normal_gap"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starWars2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/star_wars_episodio_3"
            android:textColor="@color/white"
            android:textSize="@dimen/lg_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_gap"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/xlarge_gap"
                android:layout_weight="2"
                android:text="@string/genero"
                android:textColor="@color/white"
                android:textSize="@dimen/lg_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calificacion_STW"
                android:textColor="@color/calification"
                android:textSize="@dimen/xlg_text_size" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resumen_SW"
            android:textColor="@color/white"
            android:textSize="@dimen/m_text_size"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>